[BACK] Correccion de errores en AuthController, AuthService, CuadrillaController, DashboardController, HistorialController, JwtAuthenticationFilter, JwtUtils, MunicipioController, NotificacionController, ReporteController, SecurityConfig, UsuarioController, VoluntarioController y creacion de archivos para seguridad: AuthenticationHelper y GlobalExceptionHendler